﻿Short summary of changes.  For a complete list see the git log.

2012-10-06
Receiver port can now be configured as PPM *and* PWM inputs.
Pin 1 is PPM, other pins are PWM inputs.

2012-07-27
Added the ability to load stylesheets from external file according to operating system:
macos.qss, linux.qss, windows.qss
Files should be placed inside the app folder.

2012-07-27
Several UI changes. 
MixerCurveWidget refactoring, now as a simple and advanced view.

2012-07-27
Added “advanced mode” option to general settings. Right now it only shows the hidden apply buttons.
To enable go to tools->options->General and click one of the checkboxes to give focus to the form,
then press F7

2012-07-27
Made the flight mode switch and accessory pots move according to user input on the input wizard.

2012-07-27
Changed the board pictures on the uploader widget

2012-07-27
Add more verbose debug output on the UAVOBJECTS saving code.

2012-08-11
CopterControl can now emulate an 8-channel USB HID joystick.  Primarily,
this lets you use any RC transmitter with flight simulators on your PC.

2012-07-20
AeroSimRC simulator plugin is now included into the Windows distribution
(will be installed into .../OpenPilot/misc/AeroSIM-RC directory).  Still
being an experimental development tool, it could be used to play with
HITL version 2.  Other platforms include udp_test utility which can be
used to check the connectivity with AeroSimRC plugin running on Windows
machine.

2012-07-10
On Windows the installation mode was changed from per-user to per-machine
(for all users) installation.  It is recommended to completely uninstall
previous version before installing new one to remove per-user installed
files.  Per-machine installation requires elevated (administrator) previleges
during install.  But since the same rights are now required to install
optional CDC driver (virtual communication port), it was deemed acceptable.

2012-06-04
AeroSimRC support merged into next

2012-05-26